--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
-# Auth0 Configuration
-# Copy this file to .env and fill in your Auth0 credentials
-
+# Auth0
 AUTH0_DOMAIN=your-auth0-domain.auth0.com
 AUTH0_CLIENT_ID=your_client_id
 AUTH0_CLIENT_SECRET=your_client_secret
 AUTH0_CUSTOM_SCHEME=com.example.yourapp
+
+# Backend
+BASE_BACKEND_URL=http://dorrego-server.brazilsouth.cloudapp.azure.com:9080
