--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,5 +1,6 @@
 org.gradle.jvmargs=-Xmx4G
 android.useAndroidX=true
 android.enableJetifier=true
-org.gradle.java.home=/usr/lib/jvm/java-17-openjdk
+#org.gradle.java.home=/usr/lib/jvm/java-17-openjdk
+org.gradle.java.home=C:\\Program Files\\Java\\jdk-17
 
